# quickstack

./: .gitignore  CMakeLists.txt  README  quickstack.cc  quickstack.h
licenses/: COPYING  COPYING.bulkdbg
